公共服务映射

--- a/zuul_application.yml
+++ b/zuul_application.yml
@@ -49,3 +49,6 @@ zuul:
     plat.path: /plat/**
     product.serviceId: product-service
     product.path: /product/**
+    common.serviceId: common-privoder
+    common.path: /common/**
+
