--- a/service_product_application.yml
+++ b/service_product_application.yml
@@ -17,6 +17,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:7001/eureka/
+feign:
+  hystrix:
+    enabled:true   #¿ªÆôÈÛ¶ÏÆ÷
 mybatis-plus:
   mapper-locations: classpath:cn/itsource/aigou/mapper/*Mapper.xml
   type-aliases-package: cn.itsource.aigou.domain,cn.itsource.aigou.query
