--- a/service_product_application.yml
+++ b/service_product_application.yml
@@ -19,7 +19,7 @@ eureka:
       defaultZone: http://localhost:7001/eureka/
 feign:
   hystrix:
-    enabled:true   #¿ªÆôÈÛ¶ÏÆ÷
+    enabled:true
 mybatis-plus:
   mapper-locations: classpath:cn/itsource/aigou/mapper/*Mapper.xml
   type-aliases-package: cn.itsource.aigou.domain,cn.itsource.aigou.query
